--- a/arch/arm/boot/dts/a10ad9371facc-dbg_ad9371n4.dtsi
+++ b/arch/arm/boot/dts/a10ad9371facc-dbg_ad9371n4.dtsi
@@ -104,7 +104,7 @@
 
 		#clock-cells = <0>;
 		clock-output-names = "n4_jesd204_rx_os_lane_clock";
-	};
+	}; 
 
 	n4_axi_ad9371_tx_dma: axi-ad9371-tx-dma@14c000 {
 		compatible = "adi,axi-dmac-1.00.a";
@@ -118,7 +118,6 @@
 			adi,source-bus-width = <128>;
 			adi,destination-bus-width = <128>;
 			adi,type = <1>;
-			adi,cyclic;
 		};
 	};
 
@@ -168,8 +167,7 @@
 		clocks = <&n4_trx0_ad9371 2>;
 		clock-names = "sampl_clk";
 		spibus-connected = <&n4_trx0_ad9371>;
-		//adi,axi-pl-fifo-enable;/* RxDMA fifo mode */
-		adi,axi-pl-fifo-disable;
+		adi,axi-pl-fifo-enable;
 	};
 
 	n4_xcvr_rx_os_core: axi-ad9371-rx-obs-hpc@178000 {
@@ -237,9 +235,8 @@
 		tx2_enable-gpios = <&sys_gpio_out 3 0>;
 		tx1_enable-gpios = <&sys_gpio_out 4 0>;
 
-		// all interrupts in HW design should be reviewed
 		//interrupt-parent = <&intc>;
-		//interrupts = <0 49 IRQ_TYPE_LEVEL_HIGH>;
+		//interrupts = <0 49 4>;
 
 		/* Clocks */
 		clocks = <&n4_axi_ad9371_rx_jesd>, <&n4_axi_ad9371_tx_jesd>, <&n4_axi_ad9371_rx_os_jesd>, <&clk0_ad9528 8>, <&clk0_ad9528 11>;
